Fix OpenAPI
